horizontal scroll fix

--- a/src/assets/css/home/hero.css
+++ b/src/assets/css/home/hero.css
@@ -126,10 +126,10 @@
 
     .hero-img {
         position: absolute;
-        top: 83%;
+        top: 80%;
         left: 57%;
         transform: translate(-50%, -50%);
-        height: 120%;
+        height: 117%;
         max-width: 100%;
         overflow: hidden;
     }
@@ -141,7 +141,7 @@
         font-size: 50px;
         z-index: 400;
         left: 6%;
-        top: 48%;
+        top: 45%;
         width: 80%;
     }
 
@@ -150,7 +150,7 @@
         font-size: 20px;
         width: 90%;
         left: 7%;
-        top: 75%;
+        top: 72%;
         z-index: 400;
         color: #2C3E50;
         font-weight: bold;
@@ -164,7 +164,7 @@
         font-size: 20px;
         border-radius: 15px;
         right: 32%;
-        top: 88%;
+        top: 85%;
         transition: all 0.3s ease-in-out;
     }
 
